import old components, start sidenav bar

--- a/angular.json
+++ b/angular.json
@@ -93,6 +93,36 @@
           }
         }
       }
+    },
+    "Cat-KitUI": {
+      "projectType": "library",
+      "root": "projects/cat-kit-ui",
+      "sourceRoot": "projects/cat-kit-ui/src",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular/build:ng-packagr",
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/cat-kit-ui/tsconfig.lib.prod.json"
+            },
+            "development": {
+              "tsConfig": "projects/cat-kit-ui/tsconfig.lib.json"
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "test": {
+          "builder": "@angular/build:karma",
+          "options": {
+            "tsConfig": "projects/cat-kit-ui/tsconfig.spec.json",
+            "polyfills": [
+              "zone.js",
+              "zone.js/testing"
+            ]
+          }
+        }
+      }
     }
   }
 }
