--- a/projects/cat-kit-ui/package.json
+++ b/projects/cat-kit-ui/package.json
@@ -8,5 +8,9 @@
   "dependencies": {
     "tslib": "^2.3.0"
   },
-  "sideEffects": false
+  "sideEffects": false,
+  "assets": [
+    "src/lib/assets/styles.scss",
+     "src/lib/assets/_variables.scss"
+  ]
 }
